--- a/App.css
+++ b/App.css
@@ -1,10 +1,4 @@
 
-h1, h2, h3, h5, th, td, div{
-
-color: #1142e1;
-
-}
-
 .App {
   text-align: center;
 }
@@ -14,7 +8,7 @@ color: #1142e1;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion: no-) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
